[tool.poetry]
name = "us-medical-insurance"
version = "0.1.0"
description = ""
authors = ["thomasl0433 <61367229+thomasl0433@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "us_medical_insurance"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
